fix ajout d'une alerte jeu version mobile

--- a/client/src/styles/Gamelist.css
+++ b/client/src/styles/Gamelist.css
@@ -54,20 +54,30 @@
 
 @media screen and (max-width: 992px) {
   .gamelist-main {
+    display: none;
+  }
+  .mobiledev {
+    width: 80vw;
+    max-width: 400px;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    flex-wrap: nowrap;
-    overflow-y: auto;
+    justify-content: center;
+    align-items: center;
+    background-color: #a14ed9dd;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 0 auto;
+    border: 2px solid black;
+    box-shadow: 0px 0px 5px 5px #ffffff6b;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 1rem;
   }
+}
 
-  .game-card {
-    width: 80vw;
-    margin: 1rem;
-    box-sizing: border-box;
-
-    position: relative;
-    background-color: transparent;
-    border: none;
+@media screen and (min-width: 992px) {
+  .mobiledev {
+    display: none;
   }
 }
